# local-dictation

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  PARAKEET_COREML.md  PARAKEET_NOTE.md  PERFORMANCE.md  README.md  Settings.json  build_standalone.py  corrections.example.json  custom_words_sample.json  dev-run.sh  dictionary.example.json  download_assistant_model.py  install.sh  prompts.example.json  pyproject.toml  setup_parakeet.sh
docs/: feature-architecture.html  wake-word-and-preroll.md
electron/: README.md  create_icons.py  debug.html  history.html  main.js  package-lock.json  package.json  settings.html  visualizer.html  visualizer_realtime.html
electron/sounds/: generate_sounds.py
examples/: cleanup_stream_lab.rs  latency_lab.rs  model_bakeoff.rs  preroll_lab.rs  prompt_lab.rs  silero_seg.rs  streaming_lab.rs  vad_stream_lab.rs  wake_word_lab.rs
parakeet-coreml/: Package.swift  download_model.sh
parakeet-coreml/.build/: build.db  plugin-tools.yaml
parakeet-coreml/.build/arm64-apple-macosx/release/: parakeet-cli  plugin-tools-description.json
parakeet-coreml/.build/arm64-apple-macosx/release/ModuleCache/: CoreML-2QBL4BB8ZD0DL.swiftmodule
parakeet-coreml/.build/arm64-apple-macosx/release/ModuleCache/36ALDCEWRTHZG/: AVFAudio-MFFJ6HCE9A7Z.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AudioToolbox-3FX4B654ICQE2.pcm  AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Carbon-3FMY3B0T5SZYU.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreAudio-J9DSWC1670R6.pcm  CoreAudioTypes-11649WXSRCA0E.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreMIDI-1WOF0UOPGOCPX.pcm  CoreML-59H0IRBTCTIW.pcm  CoreMedia-SHYM2JB41P4U.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  MediaToolbox-1P5YMSVDQUIJ6.pcm  Metal-1GCZV9N85NJOH.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  (+55 more)
parakeet-coreml/.build/arm64-apple-macosx/release/Modules/: ParakeetCLI.swiftdoc  ParakeetCLI.swiftmodule  ParakeetCLI.swiftsourceinfo
parakeet-coreml/.build/arm64-apple-macosx/release/ParakeetCLI.build/: ParakeetCLI.d  master.swiftdeps  output-file-map.json  sources
parakeet-coreml/.build/arm64-apple-macosx/release/parakeet-cli.dSYM/Contents/: Info.plist
parakeet-coreml/.build/arm64-apple-macosx/release/parakeet-cli.dSYM/Contents/Resources/DWARF/: parakeet-cli
parakeet-coreml/.build/arm64-apple-macosx/release/parakeet-cli.dSYM/Contents/Resources/Relocations/aarch64/: parakeet-cli.yml
parakeet-coreml/.build/arm64-apple-macosx/release/parakeet-cli.product/: Objects.LinkFileList
parakeet-coreml/Sources/: ParakeetCLI.swift
prompts-lab/: README.md  cleanup_stream.json  lab.json
scripts/: build-app.sh  download-models.sh  gen-streaming-corpus.sh  gen-vad-corpus.sh  make-icon.swift  reload-daemon.sh
src/: app_paths.rs  audio.rs  audio_duck.rs  cleaner.rs  clipboard_paste.rs  corrections.rs  cues.rs  daemon.rs  dictionary.rs  history.rs  injector.rs  ipc.rs  lib.rs  main.rs  menubar.rs  model_fetch.rs  numbers.rs  prompts.rs  refiner.rs  screen_context.rs  settings.rs  smart_pad.rs  spoken_command.rs  text_polish.rs  transcriber.rs  ui_channel.rs  vad.rs  voice_commands.rs  wake_word.rs
src/local_dictation/: app_context.py  assistant.py  audio.py  audio_optimized.py  cli.py  cli_electron.py  cli_electron_audio.py  cli_optimized.py  config.py  decode_profiles.py  dictation_config.py  endpoint_manager.py  hotkey.py  hotkey_enhanced.py  mcp_client.py  metrics.py  parakeet.py  ptt_controller.py  text_insert.py  transcribe.py  transcribe_optimized.py  transcribe_parakeet.py  transcribe_unified.py  type_text.py  vad.py  vad_webrtc.py  wake_word.py
tests/: verification.rs
