[project]
name = "local-dictation"
version = "0.2.0"
description = "Fast push-to-talk dictation (macOS-optimized, Apple Silicon)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tristan (rewrite)", email = "noreply@example.com" }]

dependencies = [
  "numpy>=2.3.2",
  "scipy>=1.16.1",
  "sounddevice>=0.5.2",
  "soundfile>=0.13.1",
  "pynput>=1.7.7",
  "pywhispercpp", # uses whisper.cpp; will download models on first use
  "orjson>=3.10.7",
  "pillow>=11.3.0",
]

[project.scripts]
local-dictation = "local_dictation.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.local-dictation]
# defaults (also exposed as CLI flags / env):
# model = "medium.en"       # good balance of speed and accuracy
# lang  = "en"              # force English for better accuracy
# chord = "CMD,ALT"         # hold both to talk
# debounce_ms = 50          # optimized for responsiveness
# max_sec = 90
# highpass_hz = 0           # 0 disables; try 100 in noisy envs
# output = "text"           # text|lower|json